criação modulo consulta NA

--- a/notebook/analise_exploratoria.ipynb
+++ b/notebook/analise_exploratoria.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1d08599d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'src'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msns\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mvisualiza\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mvisualiza\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m consulta_na\n\u001b[32m      8\u001b[39m sys.path.append(\u001b[33m'\u001b[39m\u001b[33m../\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'src'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -13,17 +25,327 @@
     "import statistics as sts\n",
     "import seaborn as sns\n",
     "import sys\n",
+    "from src.visualiza.visualiza import consulta_na\n",
     "sys.path.append('../')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "434a2488",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv(\"../data/vgsales.csv\", sep=',')"
+    "df = pd.read_csv(\"../data/vgsales.csv\", sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0265d4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16598, 11)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30c7b953",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Year'].astype = df[\"Year\"].fillna(0).astype(int).inplace=True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7d57cb4",
+   "metadata": {},
+   "source": [
+    "# Descrição dos atributos do dataset\n",
+    "* Rank: Se trata da posição daquele determinado jogo no ranking de vendas;\n",
+    "* Name: Se trata do título do jogo;\n",
+    "* Platform: Se trata do console em que o jogo foi lançado;\n",
+    "* Year: Se refere ao ano de lançamento daquele título;\n",
+    "* Genre: Se trata do gênero daquele jogo;\n",
+    "* Publisher: Empresa responsável pela publicação do jogo;\n",
+    "* NA_Sales: Vendas na América do Norte, em milhões de dólares;\n",
+    "* EU_Sales: Vendas na Europa, em milhões de dólares;\n",
+    "* JP_Sales: Vendas no Japão, em milhões de dólares;\n",
+    "* Other_Sales: Vendas no em outras regiões além de Japão, Europa e América do Norte;\n",
+    "* Global_Sales: Total de vendas mundiais."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "754ed4cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Platform</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>Publisher</th>\n",
+       "      <th>NA_Sales</th>\n",
+       "      <th>EU_Sales</th>\n",
+       "      <th>JP_Sales</th>\n",
+       "      <th>Other_Sales</th>\n",
+       "      <th>Global_Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Wii Sports</td>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>41.49</td>\n",
+       "      <td>29.02</td>\n",
+       "      <td>3.77</td>\n",
+       "      <td>8.46</td>\n",
+       "      <td>82.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Super Mario Bros.</td>\n",
+       "      <td>NES</td>\n",
+       "      <td>1985.0</td>\n",
+       "      <td>Platform</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>29.08</td>\n",
+       "      <td>3.58</td>\n",
+       "      <td>6.81</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>40.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Mario Kart Wii</td>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>Racing</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>15.85</td>\n",
+       "      <td>12.88</td>\n",
+       "      <td>3.79</td>\n",
+       "      <td>3.31</td>\n",
+       "      <td>35.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Wii Sports Resort</td>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>15.75</td>\n",
+       "      <td>11.01</td>\n",
+       "      <td>3.28</td>\n",
+       "      <td>2.96</td>\n",
+       "      <td>33.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Pokemon Red/Pokemon Blue</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>1996.0</td>\n",
+       "      <td>Role-Playing</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>11.27</td>\n",
+       "      <td>8.89</td>\n",
+       "      <td>10.22</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>31.37</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Rank                      Name Platform    Year         Genre Publisher  \\\n",
+       "0     1                Wii Sports      Wii  2006.0        Sports  Nintendo   \n",
+       "1     2         Super Mario Bros.      NES  1985.0      Platform  Nintendo   \n",
+       "2     3            Mario Kart Wii      Wii  2008.0        Racing  Nintendo   \n",
+       "3     4         Wii Sports Resort      Wii  2009.0        Sports  Nintendo   \n",
+       "4     5  Pokemon Red/Pokemon Blue       GB  1996.0  Role-Playing  Nintendo   \n",
+       "\n",
+       "   NA_Sales  EU_Sales  JP_Sales  Other_Sales  Global_Sales  \n",
+       "0     41.49     29.02      3.77         8.46         82.74  \n",
+       "1     29.08      3.58      6.81         0.77         40.24  \n",
+       "2     15.85     12.88      3.79         3.31         35.82  \n",
+       "3     15.75     11.01      3.28         2.96         33.00  \n",
+       "4     11.27      8.89     10.22         1.00         31.37  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f8bfc72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16598 entries, 0 to 16597\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Rank          16598 non-null  int64  \n",
+      " 1   Name          16598 non-null  object \n",
+      " 2   Platform      16598 non-null  object \n",
+      " 3   Year          16327 non-null  float64\n",
+      " 4   Genre         16598 non-null  object \n",
+      " 5   Publisher     16540 non-null  object \n",
+      " 6   NA_Sales      16598 non-null  float64\n",
+      " 7   EU_Sales      16598 non-null  float64\n",
+      " 8   JP_Sales      16598 non-null  float64\n",
+      " 9   Other_Sales   16598 non-null  float64\n",
+      " 10  Global_Sales  16598 non-null  float64\n",
+      "dtypes: float64(6), int64(1), object(4)\n",
+      "memory usage: 1.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a9d312c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " dados em branco = 271\n",
+      " dados em branco = 271\n",
+      " dados em branco = False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f' dados em branco = {df[\"Year\"].isnull().sum()}')\n",
+    "print(f' dados em branco = {df[\"Year\"].isna().sum()}')\n",
+    "print(f' dados em branco = {df[\"Year\"].empty}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52986234",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Year\n",
+       "1980.0       9\n",
+       "1981.0      46\n",
+       "1982.0      36\n",
+       "1983.0      17\n",
+       "1984.0      14\n",
+       "1985.0      14\n",
+       "1986.0      21\n",
+       "1987.0      16\n",
+       "1988.0      15\n",
+       "1989.0      17\n",
+       "1990.0      16\n",
+       "1991.0      41\n",
+       "1992.0      43\n",
+       "1993.0      60\n",
+       "1994.0     121\n",
+       "1995.0     219\n",
+       "1996.0     263\n",
+       "1997.0     289\n",
+       "1998.0     379\n",
+       "1999.0     338\n",
+       "2000.0     349\n",
+       "2001.0     482\n",
+       "2002.0     829\n",
+       "2003.0     775\n",
+       "2004.0     763\n",
+       "2005.0     941\n",
+       "2006.0    1008\n",
+       "2007.0    1202\n",
+       "2008.0    1428\n",
+       "2009.0    1431\n",
+       "2010.0    1259\n",
+       "2011.0    1139\n",
+       "2012.0     657\n",
+       "2013.0     546\n",
+       "2014.0     582\n",
+       "2015.0     614\n",
+       "2016.0     344\n",
+       "2017.0       3\n",
+       "2020.0       1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agrup_plataform = df.groupby(['Year']).size()\n",
+    "agrup_plataform"
    ]
   }
  ],
