Tratamento do atributo Year

--- a/notebook/analise_exploratoria.ipynb
+++ b/notebook/analise_exploratoria.ipynb
@@ -5,19 +5,7 @@
    "execution_count": 1,
    "id": "1d08599d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'src'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msns\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mvisualiza\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mvisualiza\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m consulta_na\n\u001b[32m      8\u001b[39m sys.path.append(\u001b[33m'\u001b[39m\u001b[33m../\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'src'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -25,13 +13,15 @@
     "import statistics as sts\n",
     "import seaborn as sns\n",
     "import sys\n",
-    "from src.visualiza.visualiza import consulta_na\n",
-    "sys.path.append('../')"
+    "sys.path.append('../')\n",
+    "\n",
+    "from src.visualiza.visualiza import consulta_na, consulta_na_porcentagem\n",
+    "from src.data_cleanig.cleaning import limpa_dados_NAN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "434a2488",
    "metadata": {},
    "outputs": [],
@@ -41,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e0265d4a",
    "metadata": {},
    "outputs": [
@@ -66,9 +56,7 @@
    "id": "30c7b953",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df['Year'].astype = df[\"Year\"].fillna(0).astype(int).inplace=True"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -91,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "754ed4cd",
    "metadata": {},
    "outputs": [
@@ -220,7 +208,7 @@
        "4     11.27      8.89     10.22         1.00         31.37  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5f8bfc72",
    "metadata": {},
    "outputs": [
@@ -266,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1a9d312c",
    "metadata": {},
    "outputs": [
@@ -274,16 +262,79 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " dados em branco = 271\n",
-      " dados em branco = 271\n",
-      " dados em branco = False\n"
+      "Rank            0.00\n",
+      "Name            0.00\n",
+      "Platform        0.00\n",
+      "Year            1.63\n",
+      "Genre           0.00\n",
+      "Publisher       0.35\n",
+      "NA_Sales        0.00\n",
+      "EU_Sales        0.00\n",
+      "JP_Sales        0.00\n",
+      "Other_Sales     0.00\n",
+      "Global_Sales    0.00\n",
+      "dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "print(f' dados em branco = {df[\"Year\"].isnull().sum()}')\n",
-    "print(f' dados em branco = {df[\"Year\"].isna().sum()}')\n",
-    "print(f' dados em branco = {df[\"Year\"].empty}')\n"
+    "consulta_na_porcentagem(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4931eb8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2009.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "moda_year = sts.mode(df['Year'])\n",
+    "moda_year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "76e20970",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\dyego\\AppData\\Local\\Temp\\ipykernel_14228\\110073009.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df['Year'].fillna(moda_year, inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['Year'].fillna(moda_year, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3736c622",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Year'] = df[\"Year\"].astype(int)"
    ]
   },
   {
@@ -294,58 +345,196 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Platform</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Contagem</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>DS</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>DS</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>DS</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>212</th>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>DS</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>DS</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>DC</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>DC</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>N64</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>DC</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>250 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Year\n",
-       "1980.0       9\n",
-       "1981.0      46\n",
-       "1982.0      36\n",
-       "1983.0      17\n",
-       "1984.0      14\n",
-       "1985.0      14\n",
-       "1986.0      21\n",
-       "1987.0      16\n",
-       "1988.0      15\n",
-       "1989.0      17\n",
-       "1990.0      16\n",
-       "1991.0      41\n",
-       "1992.0      43\n",
-       "1993.0      60\n",
-       "1994.0     121\n",
-       "1995.0     219\n",
-       "1996.0     263\n",
-       "1997.0     289\n",
-       "1998.0     379\n",
-       "1999.0     338\n",
-       "2000.0     349\n",
-       "2001.0     482\n",
-       "2002.0     829\n",
-       "2003.0     775\n",
-       "2004.0     763\n",
-       "2005.0     941\n",
-       "2006.0    1008\n",
-       "2007.0    1202\n",
-       "2008.0    1428\n",
-       "2009.0    1431\n",
-       "2010.0    1259\n",
-       "2011.0    1139\n",
-       "2012.0     657\n",
-       "2013.0     546\n",
-       "2014.0     582\n",
-       "2015.0     614\n",
-       "2016.0     344\n",
-       "2017.0       3\n",
-       "2020.0       1\n",
-       "dtype: int64"
+       "    Platform  Year  Contagem\n",
+       "32        DS  2008       492\n",
+       "33        DS  2009       435\n",
+       "31        DS  2007       377\n",
+       "212      Wii  2009       360\n",
+       "34        DS  2010       326\n",
+       "..       ...   ...       ...\n",
+       "27        DS  1985         1\n",
+       "26        DC  2008         1\n",
+       "25        DC  2007         1\n",
+       "83       N64  2002         1\n",
+       "24        DC  2002         1\n",
+       "\n",
+       "[250 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "agrup_plataform = df.groupby(['Year']).size()\n",
+    "agrup_plataform = df.groupby(['Publisher','Year']).size().reset_index(name='Contagem')\n",
+    "agrup_plataform = agrup_plataform.sort_values(by='Contagem', ascending=False)\n",
     "agrup_plataform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "74977ddd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Publisher\n",
+       "Electronic Arts                 1351\n",
+       "Activision                       975\n",
+       "Namco Bandai Games               932\n",
+       "Ubisoft                          921\n",
+       "Konami Digital Entertainment     832\n",
+       "                                ... \n",
+       "Warp                               1\n",
+       "New                                1\n",
+       "Elite                              1\n",
+       "Evolution Games                    1\n",
+       "UIG Entertainment                  1\n",
+       "Name: count, Length: 578, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Publisher'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "824b1828",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Publisher                     Year\n",
+       "10TACLE Studios               2006    1\n",
+       "                              2007    2\n",
+       "1C Company                    2009    1\n",
+       "                              2011    2\n",
+       "20th Century Fox Video Games  1981    3\n",
+       "                                     ..\n",
+       "imageepoch Inc.               2014    2\n",
+       "inXile Entertainment          2015    1\n",
+       "mixi, Inc                     2015    1\n",
+       "responDESIGN                  2004    1\n",
+       "                              2005    1\n",
+       "Name: Year, Length: 2331, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agrupado = df.groupby(['Publisher','Year'])['Year'].size()\n",
+    "# agrupado = df.groupby(['Publisher','Year']).size()\n",
+    "agrupado"
    ]
   }
  ],
