--- a/notebook/analise_exploratoria.ipynb
+++ b/notebook/analise_exploratoria.ipynb
@@ -51,16 +51,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30c7b953",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "b7d57cb4",
+   "id": "901ba924",
    "metadata": {},
    "source": [
     "# Descrição dos atributos do dataset\n",
@@ -283,6 +275,152 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "51fb0dd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Platform\n",
+       "DS      2163\n",
+       "PS2     2161\n",
+       "PS3     1329\n",
+       "Wii     1325\n",
+       "X360    1265\n",
+       "PSP     1213\n",
+       "PS      1196\n",
+       "PC       960\n",
+       "XB       824\n",
+       "GBA      822\n",
+       "GC       556\n",
+       "3DS      509\n",
+       "PSV      413\n",
+       "PS4      336\n",
+       "N64      319\n",
+       "SNES     239\n",
+       "XOne     213\n",
+       "SAT      173\n",
+       "WiiU     143\n",
+       "2600     133\n",
+       "NES       98\n",
+       "GB        98\n",
+       "DC        52\n",
+       "GEN       27\n",
+       "NG        12\n",
+       "SCD        6\n",
+       "WS         6\n",
+       "3DO        3\n",
+       "TG16       2\n",
+       "GG         1\n",
+       "PCFX       1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Platform'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "29cd6d07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0              Sports\n",
+       "1            Platform\n",
+       "2              Racing\n",
+       "3              Sports\n",
+       "4        Role-Playing\n",
+       "             ...     \n",
+       "16593        Platform\n",
+       "16594         Shooter\n",
+       "16595          Racing\n",
+       "16596          Puzzle\n",
+       "16597        Platform\n",
+       "Name: Genre, Length: 16598, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Genre']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49e443ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16540"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Publisher'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3689110a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    16598.000000\n",
+       "mean         0.264667\n",
+       "std          0.816683\n",
+       "min          0.000000\n",
+       "25%          0.000000\n",
+       "50%          0.080000\n",
+       "75%          0.240000\n",
+       "max         41.490000\n",
+       "Name: NA_Sales, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Vendas America do norte\n",
+    "venda_america_norte = df['NA_Sales'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9524545",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "4931eb8f",
    "metadata": {},
@@ -302,6 +440,14 @@
     "moda_year = sts.mode(df['Year'])\n",
     "moda_year"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad371af7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -339,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "52986234",
    "metadata": {},
    "outputs": [
@@ -364,41 +510,41 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Platform</th>\n",
+       "      <th>Publisher</th>\n",
        "      <th>Year</th>\n",
        "      <th>Contagem</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>DS</td>\n",
+       "      <th>114</th>\n",
+       "      <td>Activision</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>660</th>\n",
+       "      <td>Electronic Arts</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>659</th>\n",
+       "      <td>Electronic Arts</td>\n",
        "      <td>2008</td>\n",
-       "      <td>492</td>\n",
+       "      <td>120</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>DS</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>435</td>\n",
+       "      <th>656</th>\n",
+       "      <td>Electronic Arts</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>117</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>DS</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>377</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>212</th>\n",
-       "      <td>Wii</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>DS</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>326</td>\n",
+       "      <th>2152</th>\n",
+       "      <td>Ubisoft</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>112</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -407,58 +553,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>DS</td>\n",
-       "      <td>1985</td>\n",
+       "      <th>1086</th>\n",
+       "      <td>Kadokawa Shoten</td>\n",
+       "      <td>1996</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>DC</td>\n",
-       "      <td>2008</td>\n",
+       "      <th>1081</th>\n",
+       "      <td>Kadokawa Games</td>\n",
+       "      <td>2012</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>DC</td>\n",
-       "      <td>2007</td>\n",
+       "      <th>1080</th>\n",
+       "      <td>KSS</td>\n",
+       "      <td>1996</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>N64</td>\n",
-       "      <td>2002</td>\n",
+       "      <th>1078</th>\n",
+       "      <td>KID</td>\n",
+       "      <td>1998</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>DC</td>\n",
-       "      <td>2002</td>\n",
+       "      <th>2330</th>\n",
+       "      <td>responDESIGN</td>\n",
+       "      <td>2005</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>250 rows × 3 columns</p>\n",
+       "<p>2331 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Platform  Year  Contagem\n",
-       "32        DS  2008       492\n",
-       "33        DS  2009       435\n",
-       "31        DS  2007       377\n",
-       "212      Wii  2009       360\n",
-       "34        DS  2010       326\n",
-       "..       ...   ...       ...\n",
-       "27        DS  1985         1\n",
-       "26        DC  2008         1\n",
-       "25        DC  2007         1\n",
-       "83       N64  2002         1\n",
-       "24        DC  2002         1\n",
+       "            Publisher  Year  Contagem\n",
+       "114        Activision  2009       130\n",
+       "660   Electronic Arts  2009       124\n",
+       "659   Electronic Arts  2008       120\n",
+       "656   Electronic Arts  2005       117\n",
+       "2152          Ubisoft  2008       112\n",
+       "...               ...   ...       ...\n",
+       "1086  Kadokawa Shoten  1996         1\n",
+       "1081   Kadokawa Games  2012         1\n",
+       "1080              KSS  1996         1\n",
+       "1078              KID  1998         1\n",
+       "2330     responDESIGN  2005         1\n",
        "\n",
-       "[250 rows x 3 columns]"
+       "[2331 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
